--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
             <version>1.18.8</version>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
