--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,18 @@
                         <artifactId>maven-release-plugin</artifactId>
                         <version>2.5.3</version>
                     </plugin>
+                    <!--autoReleaseAfterClose-->
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>1.6.8</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <serverId>sonatype-nexus-staging</serverId>
+                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                        </configuration>
+                    </plugin>
                 </plugins>
             </build>
             <distributionManagement>
