--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.mingzuozhibi</groupId>
     <artifactId>mzzb-common</artifactId>
-    <version>0.2.3</version>
+    <version>0.2.4-rc</version>
 
     <name>Mzzb Common</name>
     <url>https://github.com/mingzuozhibi/mzzb-common</url>
